client/css/overlays/states.css
#statesOverlay {
  --columns: 5;
  --size: calc((var(--roomWidth) * var(--scale) - 10px) / var(--columns) - 20px);
  padding: 0;
}

#stateFilters {
  justify-content: space-between;
  display: flex;
  padding: 10px;
}

#stateFilters .material-icons {
  line-height: 0.5;
  position: relative;
  top: 6px;
}

#filterByTextWrapper {
  flex-grow: 1;
  position: relative;
  border: 1px solid var(--VTTblue);
  border-radius: 11px;
}

#filterByTextWrapper .material-icons {
  font-size: 20px;
  left: -2px;
}

#stateFilters > span {
  white-space: nowrap;
  padding-left: 5px;
}

#filterByText {
  background: none;
  border: none;
  width: calc(100% - 5px - 20px - 10px - 15px);
  padding: 2px;
  position: absolute;
  left: 20px;
  top: 0;
}

#filterByTextWrapper #clearSearch {
  position: absolute;
  right: 2px;
  left: unset;
  cursor: pointer;
}
#filterByText:placeholder-shown ~ #clearSearch {
  display: none;
}

#stateFilters select {
  background: none;
  border: none;
  border-bottom: 1px solid var(--VTTblue);
}

#stateFilters select, #stateFilters input {
  margin: 0 5px;
}

@media (max-width: 700px), (max-height: 500px) { #filterByDurationWrapper { display: none; } }
@media (max-width: 550px), (max-height: 400px) { #filterByLanguageWrapper { display: none; } }
@media (max-width: 470px), (max-height: 340px) { #filterByModeWrapper     { display: none; } }
@media (max-width: 350px), (max-height: 280px) { #filterByTypeWrapper     { display: none; } }

#statesList, #stateEditOverlay {
  overflow: auto;
}

@media (max-width: 600px), (max-height: 400px) {
  #statesList { overflow: unset; }
  #statesOverlay { overflow: auto; }
}

@media (max-width: 800px), (max-height: 530px) { #statesOverlay { --columns: 4; } }
@media (max-width: 680px), (max-height: 480px) { #statesOverlay { --columns: 3; } }
@media (max-width: 520px), (max-height: 300px) { #statesOverlay { --columns: 2; } }

#statesList .title {
  border-top: 1px solid black;
  border-bottom: 1px solid gray;
  padding: 10px 15px;
  position: sticky;
  top: 0;
  right: 0;
  background: white;
  z-index: 1;
  margin-top: -1px;
}
#statesList .list {
  display: inline-block;
  padding: 0 10px 10px 10px;
}
#statesList > div{
  position: relative;
}

#addState {
  position: sticky;
  top: 10px;
  float: right;
  z-index: 3;
  margin: -60px 10px 0 0;
}

#emptyLibrary {
  color: black;
  height: calc(var(--size) - 80px - 4px);
  font-style: italic;
  padding: 40px 100px;
  margin: 8px;
}

.roomState {
  display: none;
  color: black;
  float: left;
  width: var(--size);
  height: var(--size);
  position: relative;
  overflow: hidden;

  box-shadow: 0 2px 10px #00000077;
  margin: 8px;
  border-radius: 10px;
}
.roomState.visible {
  display: block;
}

.roomState > img {
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  top: 0;
}

.roomState > .details {
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 0;
  background: #00000061;
  text-shadow: 0 0 3px #000;
  color: white;
}

.roomState h3 {
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1em;
  margin: 8px 8px 4px 8px;
}

.roomState h4 {
  font-style: italic;
  font-weight: 700;
  font-size: .8rem;
  margin: 4px 8px 8px 8px;
}

.roomState .star {
  display: none;
  position: absolute;
  top: 0;
  background: transparent;
  font-size: 200%;
  text-shadow: 1px 1px 2px #444;
}

div:nth-of-type(1) > .list > .roomState .star {
  color: gold;
}

.roomState.publicLibraryGame .star {
  display: block;
}

.roomState.noImage img {
  display: none;
}

.roomState > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.roomState em {
  display: block;
  margin-bottom: 20px;
}

.details .stats{
  margin-bottom: 8px;
}


#stateEditOverlay label {
  width: 200px;
  display: inline-block;
}

#stateEditOverlay textarea {
  width: 400px;
  height: 300px;
}

#variantsEditList > div {
  margin-bottom: 30px;
}

#stateEditOverlay .input{
  display: flex;
}
.variantsList .prettyButton.play{
  flex-wrap: wrap;
}

.variantsList .prettyButton.play .variant{
  padding-top: 4px;
  border-top: 1px solid #ffffffaa;
  width: 100%;
}
.variantsList .prettyButton.play .variant:empty{
  display: none;
}


@media (max-width: 430px) {
  #addState {
    margin-top: 4px;
    float: unset;
  }
}
@media (max-width: 320px), (max-height: 240px) {
  #statesOverlay, .roomState, #emptyLibrary {
    margin:  0;
    padding: 0;
  }
  #statesOverlay h2.title {
    margin:  0 !important;
    padding: 0 !important;
  }
  #filterByPlayersWrapper {
    display: none;
  }
  #addState {
    float: right;
    margin: 4px;
    padding: 4px;
  }
  #emptyLibrary {
    height: unset;
    clear: both;
  }
  .roomState {
    height: 48px;
    width:  100%;
    margin-bottom: 4px;
    box-shadow: unset;
  }
  .roomState > img {
    height: 48px;
    width:  48px;
  }
  .roomState > .details {
    left: 48px;
    height: 48px;
  }
}





/* State details */

#stateDetailsOverlay {
  padding: 0;
}

#stateDetailsOverlay button.close {
  position: absolute;
  right: 10px;
  top: 10px;
}

#stateDetailsOverlay button.edit {
  position: absolute;
  left: 10px;
  top: 10px;
}


#mainDetails, #similarDetails, #variantsList, #helpTexts {
  position: absolute;
  width: 60%;
  top: 10px;
  left: 20%;
  height: 300px;
  box-sizing: border-box;
  background: var(--roomColor);
  padding-right: 20px;
  border-radius: 20px;
  overflow: hidden;
}
#mainDetails img, #similarDetails img {
  float: left;
  margin-right: 20px;
  height: 300px;
  width: 300px;
  object-fit: cover;
}
#mainDetails h1, #similarDetails h1 {
  text-align: left;
}
#mainDetails .star {
  position: absolute;
  font-size: 50px;
  background: none;
  text-shadow: 2px 2px 4px #444;
}
#mainDetails .active.star {
  color: gold;
}

#similarDetails {
  top: unset;
  bottom: 10px;
  left: 10px;
  width: calc(50% - 15px);
  height: 200px;
}
#similarDetails h1 {
  font-size: 1.3em;
}
#similarDetails img {
  height: 200px;
  width: 200px;
}
#similarDetails a {
  color: var(--VTTblue);
}

#prevState, #nextState {
  --size: 160px;
  min-height: var(--size);
  position: absolute;
  top: calc(10px + ( 300px - var(--size) ) / 2);
  left: calc(( 20% - var(--size) ) / 2);
  margin: 0;
}
#nextState {
  left: unset;
  right: calc(( 20% - var(--size) ) / 2);
}
#prevState button, #nextState button {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff8;
}
#prevState button i, #nextState button i {
  color: black;
  font-size: 140px;
  margin: auto;
}


#variantsList {
  top: 320px;
  bottom: 220px;
  left: 10px;
  width: calc(50% - 15px);
  height: unset;
  padding: 0;
}

#variantsList > * {
  display: inline-block;
}

#variantsList > .variantsList {
  vertical-align: top;
  padding: 10px;
}

#variantsList img {
  height: 100%;
}


#helpTexts {
  top: 320px;
  bottom: 10px;
  left: unset;
  right: 10px;
  width: calc(50% - 15px);
  height: unset;
  padding: 20px;
  overflow: auto;
}

